--- a/HTML/assets/less/module.less
+++ b/HTML/assets/less/module.less
@@ -70,8 +70,9 @@ input#duration{
 
 		.qstnStatus{
 			position: absolute;
-			right: -170px;
-			top: 12px;
+			right: -165px;
+			top: 0;
+			width: 150px;
 		}
 	}
 }
