--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2010,8 +2010,9 @@ input#duration {
 }
 #myCanvas-miki .cbp_tmtimeline > li .qstnStatus {
   position: absolute;
-  right: -170px;
-  top: 12px;
+  right: -165px;
+  top: 0;
+  width: 150px;
 }
 .modTimes > div {
   width: 25%;
@@ -2262,6 +2263,9 @@ input#duration {
   .sidebarContainer .quizProgress .quizSteps ul li a {
     width: 15%;
   }
+}
+.quizSummRespnse {
+  line-height: 20px;
 }
 /*Dashboard*/
 .teacher-app {
