--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -1,16 +1,16 @@
 <div class="tiles white grid simple animated fadeIn'">
     <div class="grid-title">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 b-r b-grey">
                 <h3 class="no-margin semi-bold">
                     <label class="form-label text-grey">Quiz Name</label>
                     {{name}} 
                     {{#responseSummary}} 
-                        <span class="small text-success semi-bold no-margin inline">(Taken On: {{taken_on_date}})</span>
+                        <span class="small text-info semi-bold block m-t-5">Taken on: <span class="bold">{{taken_on_date}}</span></span>
                     {{/responseSummary}} 
                 </h3>
             </div>
-            <div class="col-md-6 b-l b-grey small-text">
+            <div class="col-md-6 small-text">
                 <div class="row">
                     <div class="col-md-6">
                         <label class="form-label text-grey">Textbook</label>
@@ -28,51 +28,51 @@
     <div class="grid-body" style="overflow: hidden; display: block;">
         <div class="row m-b-10">
             <div class="col-md-3">
-                    <label class="form-label">No. of Questions</label>
-                    {{getQuestionsCount}} 
+                    <label class="form-label no-margin">No. of Questions: <h4 class="inline semi-bold no-margin">{{getQuestionsCount}}</h4> </label>
+                    
                     {{#responseSummary}} 
-                        <h4 class="text-success semi-bold no-margin inline">(You attempted: <span class="bold">{{num_questions_answered}}</span>)</h4>
+                        <h3 class="semi-bold no-margin quizSummRespnse">
+                            <span class="text-info small no-margin inline">You attempted: <span class="bold">{{num_questions_answered}}</span></span></h3>
                     {{/responseSummary}}
             </div>
-            <div class="col-md-3 b-r b-grey">
-                    <label class="form-label">Duration</label>
-                    {{total_minutes}} mins
+            <div class="col-md-3">
+                    <label class="form-label no-margin">Duration: <h4 class="inline semi-bold no-margin">{{total_minutes}} mins</h4></label>
+                    
                     {{#incompleteQuiz}}
-                        <h4 class="text-success semi-bold no-margin inline">
-                            Current Elapsed Time: 
+                        <h3 class="semi-bold no-margin quizSummRespnse">
+                            <span class="text-info small no-margin inline">Current Elapsed Time: 
                             <span class="bold">
                                 {{total_time_taken}}
-                            </span><br> 
-                            Time remaining: 
+                            </span></span><br> 
+                            <span class="text-info small no-margin inline">Time remaining: 
                             <span class="bold">
                                 {{time_remaining}}
-                            </span>
-                        </h4>
+                            </span></span>
+                        </h3>
                     {{/incompleteQuiz}}
                     {{#responseSummary}} 
-                        <h4 class="text-success semi-bold no-margin inline">(Completed in: <span class="bold">{{total_time_taken}}</span>)</h4>
+                        <h3 class="semi-bold no-margin quizSummRespnse"><span class="text-info small no-margin">Completed in: <span class="bold">{{total_time_taken}}</span></span></h3>
                     {{/responseSummary}}
             </div>
             <div class="col-md-3">
-                    <label class="form-label">Marks</label>
-                    {{marks}}
+                    <label class="form-label no-margin">Marks: <h4 class="inline semi-bold no-margin">{{marks}}</h4></label>
+                    
                     {{#display_marks}} 
-                        <h4 class="text-success semi-bold no-margin inline">
+                        <h3 class="semi-bold no-margin quizSummRespnse">
                             {{#negMarksEnable}}
-                                You scored: <span class="bold">{{marks_scored}}</span><br>
-                                Negative marks: <span class="bold">{{negative_scored}}</span><br> 
-                                Total scored: <span class="bold">{{total_marks_scored}}</span><br>
+                                <span class="text-success small no-margin">You scored: <span class="bold">{{marks_scored}}</span></span><br>
+                                <span class="text-error small no-margin">Negative marks: <span class="bold">{{negative_scored}}</span></span><br> 
+                                <span class="text-info small no-margin">Total scored: <span class="bold">{{total_marks_scored}}</span></span>
                             {{/negMarksEnable}}
                             {{^negMarksEnable}}
-                                (You scored: <span class="bold">{{total_marks_scored}}</span>)
+                                <span class="text-info small no-margin">You scored: <span class="bold">{{total_marks_scored}}</span></span>
                             {{/negMarksEnable}}
-                        </h4>
+                        </h3>
                     {{/display_marks}}
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 ">
                 {{#negMarksEnable}}
-                    <label class="form-label">Negative Marks</label>
-                    {{negMarks}}%
+                    <label class="form-label no-margin">Negative Marking: <h4 class="inline semi-bold no-margin">{{negMarks}}%</h4> </label>
                 {{/negMarksEnable}}
             </div>
         </div>
