--- a/HTML/assets/less/student.less
+++ b/HTML/assets/less/student.less
@@ -1,9 +1,18 @@
 #textbooks.list.myClass{
+	.meta{
+		width: 15.5%;
+	}
 	.meta.name{
-		width: 40%;
+		width: 25%;
+		.img_wrapper{
+			width: 25%;
+		}
+		.titles{
+			width: 65%;
+		}
 	}
 	.meta.rec{
-		width: 20%;
+		width: 22%;
 	}
 	.txtbook{
 		cursor: pointer;
