--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2024,6 +2024,9 @@ input#duration {
   float: left;
   padding: 0 10px 10px;
 }
+#take-class-modules td {
+  white-space: normal;
+}
 .panel-default > .panel-heading {
   background-color: transparent;
 }
