--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -95,8 +95,13 @@
 </div>
 
 <div class="text-center">
-    <button type="button" class="btn btn-success btn-lg btn-large btn-cons2 m-r-10" id="take-quiz"> Start Quiz</button>
-    {{#try_again}}
-        <button type="button" class="btn btn-success btn-lg btn-large btn-cons2 m-r-10" id="try-again"> Try Again</button>
-    {{/try_again}}
+    {{#hasQuestions}}
+        <button type="button" class="btn btn-success btn-lg btn-large btn-cons2 m-r-10" id="take-quiz"> Start Quiz</button>
+        {{#try_again}}
+            <button type="button" class="btn btn-success btn-lg btn-large btn-cons2 m-r-10" id="try-again"> Try Again</button>
+        {{/try_again}}
+    {{/hasQuestions}}
+    {{^hasQuestions}}
+        Sorry this quiz has no questions in it.
+    {{/hasQuestions}}
 </div>
