sync import completed

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -42,11 +42,11 @@
 						<span class="fa fa-gears"></span>	
 					</a>
 					<ul aria-labelledby="user-options" role="menu" class="dropdown-menu pull-right">
-	<!-- 					<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
-						<li class="divider"></li>  -->               
+						<li><a href="#sync"><span class="fa fa-refresh"></span>&nbsp;&nbsp;Sync</a></li>
+						<li class="divider"></li>                
 						<li><a id="user_logout" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;Log Out</a></li>
 						<li class="divider"></li>
-						<li><a id="syncchk" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;sync</a></li>
+						<!-- <li><a id="syncchk" href="javascript://"><span class="fa fa-power-off"></span>&nbsp;&nbsp;sync</a></li> -->
 <!-- 						<li>&nbsp;&nbsp;Audio Cues
 						<a id="audioCues" href="javascript://">
 							<div class="onoffswitch h-align-middle">
