--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2010,8 +2010,9 @@ input#duration {
 }
 #myCanvas-miki .cbp_tmtimeline > li .qstnStatus {
   position: absolute;
-  right: -170px;
-  top: 12px;
+  right: -165px;
+  top: 0;
+  width: 150px;
 }
 .modTimes > div {
   width: 25%;
@@ -2022,6 +2023,9 @@ input#duration {
   width: 20%;
   float: left;
   padding: 0 10px 10px;
+}
+#take-class-modules td {
+  white-space: normal;
 }
 .panel-default > .panel-heading {
   background-color: transparent;
@@ -2263,6 +2267,9 @@ input#duration {
     width: 15%;
   }
 }
+.quizSummRespnse {
+  line-height: 20px;
+}
 /*Dashboard*/
 .teacher-app {
   max-width: 1164px;
@@ -2352,11 +2359,20 @@ ul.classes .classesWrap {
   padding-top: 4px;
   padding-bottom: 4px;
 }
+#textbooks.list.myClass .meta {
+  width: 15.5%;
+}
 #textbooks.list.myClass .meta.name {
-  width: 40%;
+  width: 25%;
+}
+#textbooks.list.myClass .meta.name .img_wrapper {
+  width: 25%;
+}
+#textbooks.list.myClass .meta.name .titles {
+  width: 65%;
 }
 #textbooks.list.myClass .meta.rec {
-  width: 20%;
+  width: 22%;
 }
 #textbooks.list.myClass .txtbook {
   cursor: pointer;
