--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -33,7 +33,7 @@
             <div class="row m-l-0 m-r-0 m-t-5">
                 <div class="col-xs-4 b-grey b-r">
                     <p class="bold small-text muted no-margin inline">Advised time for current question:</p>
-                    <i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> 
+                    <i class="fa fa-clock-o"></i> <span id="time-on-question">{{getQuestionDuration}}</span> m
                 </div>
                 <div class="col-xs-4 b-grey b-r">
                     <p class="bold small-text muted no-margin inline">Marks for question:</p>
