--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -6,6 +6,14 @@
 	}
 }
 
+.checkbox.check-info.radioCheck input[type=checkbox]:checked + label{
+	&:before{
+		
+	}
+	&:after{
+		
+	}
+}
 
 .setGroup{
 	margin-bottom: 20px;
