--- a/wp-content/themes/walnut/walnut/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut/dev/css/style.css
@@ -3066,6 +3066,13 @@ textarea[class*="span"] {
   font-family: 'FontAwesome';
   content: "\F00C";
 }
+.checkbox.radioCheck input[type=checkbox]:checked + label {
+  color: #4d5056;
+}
+.checkbox.radioCheck input[type=checkbox]:checked + label::after {
+  font-family: 'FontAwesome';
+  content: "\f111";
+}
 .checkbox input[type=checkbox][disabled] + label {
   opacity: 0.65;
 }
@@ -3092,6 +3099,14 @@ textarea[class*="span"] {
 }
 .checkbox.check-info input[type=checkbox]:checked + label::after {
   color: #ffffff;
+}
+.checkbox.check-info.radioCheck input[type=checkbox]:checked + label:before {
+  background-color: #ffffff;
+  border: 1px solid #8b91a0;
+}
+.checkbox.check-info.radioCheck input[type=checkbox]:checked + label::after {
+  color: #0090d9;
+  font-size: 13px;
 }
 .checkbox.check-warning input[type=checkbox]:checked + label:before {
   background-color: #fdd01c;
