--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -231,13 +231,13 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-3">
-                                        <div class="checkbox check-info checkbox-circle perm">
+                                        <div class="checkbox check-info checkbox-circle perm radioCheck">
                                             <input name="permissions[allow_resubmit]" id="resubmit" type="checkbox" value="1">
                                             <label for="resubmit">Allow Resubmit</label>
                                         </div>
                                     </div>
                                     <div class="col-sm-3">
-                                        <div class="checkbox check-info checkbox-circle perm">
+                                        <div class="checkbox check-info checkbox-circle perm radioCheck">
                                             <input name="permissions[display_answer]" id="answer" type="checkbox" value="1">
                                             <label for="answer">Display Answer</label>
                                         </div>
