--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -37,11 +37,11 @@
                 </div>
                 <div class="col-xs-4 b-grey b-r">
                     <p class="bold small-text muted no-margin inline">Marks for question:</p>
-                    <span id=""></span>
+                    <span id="marks-for-question">{{getQuestionMarks}}</span>
                 </div>
                 <div class="col-xs-4">
                     <p class="bold small-text muted no-margin inline">Total Quiz Marks:</p>
-                    <span id=""></span>
+                    <span>{{marks}}</span>
                 </div>
             </div>
         </div>
