Issue 220 and 221 fixed Question order still not fixed

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -6,7 +6,7 @@
 {{/practice_mode}}
 
 <div class="moduleInfo m-b-20">
-	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
+    <div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
         <div class="modTime pause">
             <a class="btn btn-small btn-block btn-white m-t-10"><h4 class="semi-bold text-info no-margin">{{name}}</h4></a>
         </div>
@@ -37,17 +37,17 @@
                 </div>
                 <div class="col-xs-4 b-grey b-r">
                     <p class="bold small-text muted no-margin inline">Marks for question:</p>
-                    <span id=""></span>
+                    <span id="marks-for-question">{{getQuestionMarks}}</span>
                 </div>
                 <div class="col-xs-4">
                     <p class="bold small-text muted no-margin inline">Total Quiz Marks:</p>
-                    <span id=""></span>
+                    <span>{{marks}}</span>
                 </div>
             </div>
         </div>
 
         <div class="clearfix"></div>
-		<div class="row">
-    	</div>
-	</div>
+        <div class="row">
+        </div>
+    </div>
 </div>
