--- a/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
@@ -18,11 +18,16 @@
 			</div>
 		{{/take_quiz}}
 
-		<div class="meta rec">Status
+		<div class="meta rec">{{#take_quiz}} Practice {{/take_quiz}} Status 
 			<span class="sort anim150 asc" data-sort="data-modules" data-order="desc"></span>
 			<span class="sort anim150 desc" data-sort="data-modules" data-order="asc"></span>
 		</div>
 
+		{{#take_quiz}}
+			<div class="meta modules rec">
+			    Class Test Status 
+			</div>
+		{{/take_quiz}}
 		
 	</div>
 
