--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -2,6 +2,12 @@
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
         <thead>
             <tr>
+                <th style="width:4%">
+                    <div id="check_all_div" class="checkbox check-default" style="margin-right:auto;margin-left:auto;">
+                        <input id="check_all" type="checkbox">
+                        <label for="check_all"></label>
+                    </div>
+                </th>
                 <th>Quiz Name</th>
                 <th>Textbook</th>
                 <th>Chapter</th>
@@ -27,4 +33,13 @@
             <option value="100">100</option>
         </select>
     </div>
+
+    <button id="send-email" class="none btn btn-success btn-cons2 right pull-left m-t-10 m-r-10" type="submit">
+        <i class="fa fa-check"></i> Send Email
+    </button>
+
+    <button id="send-sms" class="none btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
+        <i class="fa fa-check"></i> Send SMS
+    </button>
+
 </div>
