Dashboard Navigation button added

--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -15,9 +15,8 @@
 
 			<ul style="display:none" id="mobile-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
 				<li class="dropdown">
-					<!--done for time being-->
-					<!-- <a class="btn btn-small btn-primary" href="#teachers/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
-					</a> -->
+					<a class="btn btn-small btn-primary" href="#students/dashboard" id="main-menu-toggle"><span class="small-text">Dashboard</span>
+					</a>
 				</li>		 
 			</ul>
 
