--- a/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/students-dashboard/textbooks/templates/textbooks-list.html
@@ -1,4 +1,4 @@
-<div class="list" id="textbooks">
+<div class="list myClass" id="textbooks">
 	<!-- "TABLE" HEADER CONTAINING SORT BUTTONS (HIDDEN IN GRID MODE)-->
 	<div class="list_header">
 		<div class="meta name active desc" id="SortByName"> 
