quiz completed student mail and parent mail

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -38,8 +38,9 @@
         <i class="fa fa-check"></i> Send Email
     </button>
 
+    <!--
     <button id="send-sms" class="none btn btn-info btn-cons2 right pull-left m-t-10" type="submit">
         <i class="fa fa-check"></i> Send SMS
-    </button>
+    </button>-->
 
 </div>
