--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -37,7 +37,7 @@
                 <input type="checkbox" id="checkbox1" value="1">
                 <label for="checkbox1">Remember Me</label>
               </div>-->
-              <a href="#">Trouble logging in?</a>
+              <a class="reset-password">Trouble logging in?</a>
 
               <!--<p class=" m-b-5 bold">Login Type</p>
               <div class="radio radio-success">
