mobile tap to view timer and steps in take-quiz

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -148,9 +148,9 @@
 }
 
 .qstnInfo{
-	max-width: 760px;
-	margin: auto;
-	margin-bottom: 5px;
+	// max-width: 760px;
+	// margin: auto;
+	// margin-bottom: 5px;
 	padding: 10px 10px 10px 20px;
 }
 
@@ -160,39 +160,34 @@
 }
 
 @media (min-width: 1020px) and (max-width:1295px){
-	#content-board{
-		margin: 0;
-		// margin-top: 15px;
-	}
-	#myCanvas, #eval-parameters{
-		margin: 0;
-		margin-left: auto;
-	}
-	#eval-parameters{
-		max-width: 755px;
-	}
-	#top-panel{
-		float: left;
-		margin-left: 2px;
-	}
-	.contentTime, .contentInfo{
-		// margin: 0;
-		// left: 5px;
-		position: static;
-		float: none;
-		margin: 0 1.5%;
-	}
-	.contentTime{
-		margin-bottom: 8px;
-	}
-	.contentInfo{
-		// top: 175px;
-	}
-	.qstnInfo{
-		margin: 0;
-		margin-bottom: 5px;
-		margin-left: auto;
-	}
+	// #content-board{
+	// 	margin: 0;
+	// }
+	// #myCanvas, #eval-parameters{
+	// 	margin: 0;
+	// 	margin-left: auto;
+	// }
+	// #eval-parameters{
+	// 	max-width: 755px;
+	// }
+	// #top-panel{
+	// 	float: left;
+	// 	margin-left: 2px;
+	// }
+	// .contentTime, .contentInfo{
+	// 	position: static;
+	// 	float: none;
+	// 	margin: 0 1.5%;
+	// }
+	// .contentTime{
+	// 	margin-bottom: 8px;
+	// }
+
+	// .qstnInfo{
+	// 	margin: 0;
+	// 	margin-bottom: 5px;
+	// 	margin-left: auto;
+	// }
 }
 .answrMsg{
 	&.alert-success{
