--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-progress/templates/quiz-progress-tpl.html
@@ -1,3 +1,4 @@
+<div class="progressStrip"><span class="fa fa-question"></span></div>
 <div class="modProgress h-center">
 	<p class="bold small-text m-b-5 p-t-10 text-center">Questions Answered</p>
 		<div class="progress progress-large m-b-10">
