--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -1,7 +1,7 @@
-<div class="container-grey m-b-5  qstnInfo">
+<!--<div class="container-grey m-b-5  qstnInfo">
     <label class="form-label bold small-text muted no-margin inline">Question Info: </label>
-    <p class="bold inline text-grey">{{&instructions}}</p>
-</div>
+    <p class="inline text-grey small">{{&instructions}}</p>
+</div>-->
 
 <div id="content-board" class="quizContent no-margin"></div>
 
@@ -42,6 +42,6 @@
 {{#showComment}}
     <div class="container-grey m-b-5 qstnInfo">
         <label class="form-label bold small-text muted no-margin inline">Comment: </label>
-        <p class="bold inline text-grey">{{&comment}}</p>
+        <p class="inline text-grey small">{{&comment}}</p>
     </div>
 {{/showComment}}
