--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -147,10 +147,10 @@
 	position: absolute;
 }
 
-.qstnInfo{
-	// max-width: 760px;
-	// margin: auto;
-	// margin-bottom: 5px;
+.qstnInfo, .quizComment{
+	max-width: 760px;
+	margin: auto;
+	margin-bottom: 5px;
 	padding: 10px 10px 10px 20px;
 }
 
@@ -160,34 +160,35 @@
 }
 
 @media (min-width: 1020px) and (max-width:1295px){
-	// #content-board{
-	// 	margin: 0;
-	// }
-	// #myCanvas, #eval-parameters{
-	// 	margin: 0;
-	// 	margin-left: auto;
-	// }
-	// #eval-parameters{
-	// 	max-width: 755px;
-	// }
-	// #top-panel{
-	// 	float: left;
-	// 	margin-left: 2px;
-	// }
-	// .contentTime, .contentInfo{
-	// 	position: static;
-	// 	float: none;
-	// 	margin: 0 1.5%;
-	// }
-	// .contentTime{
-	// 	margin-bottom: 8px;
-	// }
+	#content-board{
+		margin: 0;
+		#myCanvas, #eval-parameters{
+			margin: 0;
+			margin-left: auto;
+		}
+	}
+	
+	#eval-parameters{
+		max-width: 755px;
+	}
+	#top-panel{
+		float: left;
+		margin-left: 2px;
+	}
+	.contentTime, .contentInfo{
+		position: static;
+		float: none;
+		margin: 0 1.5%;
+	}
+	.contentTime{
+		margin-bottom: 8px;
+	}
 
-	// .qstnInfo{
-	// 	margin: 0;
-	// 	margin-bottom: 5px;
-	// 	margin-left: auto;
-	// }
+	.qstnInfo{
+		margin: 0;
+		margin-bottom: 5px;
+		margin-left: auto;
+	}
 }
 .answrMsg{
 	&.alert-success{
