--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -40,23 +40,25 @@
 	overflow-x: auto;
 }
 
-#myCanvas{
-	//border: 1px solid #505458;
-	background: @color-white;
-	//position: absolute;
-	// left: 260px;
-	// top: 0;
-	max-width: 760px;
-	margin: 0 auto;
-	min-height: 500px !important;
-	padding: 15px 10px;
-	font-weight: normal;
+#content-board, #content-board.quizContent{
+	#myCanvas{
+		//border: 1px solid #505458;
+		background: @color-white;
+		//position: absolute;
+		// left: 260px;
+		// top: 0;
+		max-width: 760px;
+		margin: 0 auto;
+		min-height: 500px !important;
+		padding: 15px 10px;
+		font-weight: normal;
 
-	li.ui-sortable-placeholder{
-		list-style: none;
-		padding: 20px 0;
-		background: lighten(@dash-grey, 15%);
-		border: none;
+		li.ui-sortable-placeholder{
+			list-style: none;
+			padding: 20px 0;
+			background: lighten(@dash-grey, 15%);
+			border: none;
+		}
 	}
 }
 
