new quiz type called class test created with functionality for scheduling timeframe within which the quiz will be available to the students

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -14,6 +14,9 @@
                 <th>Duration</th>
                 <th>Type</th>
                 <th>Taken By</th>
+                {{#can_schedule}}
+                    <th>Schedule</th>
+                {{/can_schedule}}
                 <th></th>
             </tr>
         </thead>
