--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -84,10 +84,10 @@
         <div class="row">
             <div class="col-sm-12">
                 <h5 class="bold">Quiz Instructions</h5>
-                    {{&instructions}}
-                    {{^instructions}}
+                    {{&description.instruction}}
+                    {{^description.instruction}}
                         This quiz has no instructions.
-                    {{/instructions}}
+                    {{/description.instruction}}
             </div>
         </div>
         
