--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/modules-listing/templates/outer-template.html
@@ -1,4 +1,9 @@
 <div class="col-lg-12">
+
+    <button class="send-email none btn btn-success m-b-10 m-r-10" type="submit">
+        <i class="fa fa-check"></i> Send Email
+    </button>
+
     <table class="table table-bordered m-t-10" id="content-pieces-table" >
         <thead>
             <tr>
@@ -37,7 +42,7 @@
         </select>
     </div>
 
-    <button id="send-email" class="none btn btn-success btn-cons2 right pull-left m-t-10 m-r-10" type="submit">
+    <button class="send-email none btn btn-success pull-left m-t-10 m-r-10" type="submit">
         <i class="fa fa-check"></i> Send Email
     </button>
 
