--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -333,8 +333,11 @@ textarea.error, .select2-choice.error {
 	th.duration{
 		width: 10%;
 	}
+	th.statusColmn{
+		width: 13%;
+	}
 	th:last-child{
-		width: 30%;
+		width: 29%;
 	}
 }
 
