--- a/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
@@ -40,7 +40,7 @@
                         <th class="v-align-middle">Quiz Type</th>
                     {{/take_quiz}}
                     <th class="{sorter:\'minutesSort\'} duration">Duration</th>
-                    <th><div id="status_header">Status</div></th>
+                    <th class="statusColmn"><div id="status_header">Status</div></th>
                     <th>{{#take_quiz}}Taken On{{/take_quiz}}
                     {{^take_quiz}}Schedule Date{{/take_quiz}}</th>
                   </tr>
