--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2618,8 +2618,11 @@ textarea.error,
 #take-class-modules.takeClass th.duration {
   width: 10%;
 }
+#take-class-modules.takeClass th.statusColmn {
+  width: 13%;
+}
 #take-class-modules.takeClass th:last-child {
-  width: 30%;
+  width: 29%;
 }
 .table-fixed-layout td.cpHeight {
   white-space: normal;
