--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -875,3 +875,10 @@ textarea{
 				border-image:url(../../../images/border.gif) 20 20 stretch;
 	}
 }
+
+
+.table-bordered th{
+	background-color: @color-grey;
+	border: 1px solid @color-grey;
+	color: @color-white;
+}
