--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
@@ -7,10 +7,12 @@
 		</div>
 		<div class="grid-body" style="overflow: hidden; display: block;">
 		<div class="row ">
+			{{^trainingMode}}
 			<div class="col-md-3 b-grey b-r">
 					<label class="form-label">Number of Students</label>
 					{{showNoOfStudents}}
 			</div>
+			{{/trainingMode}}
 			<div class="col-md-5">
 					<label class="form-label">Subjects</label>
 					{{showSubjectsList}}
