--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/class-report-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-reports/class-report/templates/class-report-layout.html
@@ -6,9 +6,9 @@
 </div>
 
 <div class="grid-body no-border contentSelect" style="overflow: hidden; display: block;">
-    <div class="row">
-        <div class="col-md-4">Number of Students : <span id="students-count"></span></div>
-        <div class="col-md-8" id="students-filter-region"></div>
+    <div class="row m-b-20">
+        <div class="col-md-3"><span class="small">Number of Students :</span> <span id="students-count"></span></div>
+        <div class="col-md-9" id="students-filter-region"></div>
     </div>
     <div id="filters-region" class="m-b-10"></div>
 
