--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -5,7 +5,7 @@
         <thead>
         <tr>
             <th>Excerpt</th>
-            <th>Present in training module</th>
+            <th>Present in module</th>
             <th>Textbook</th>
             <th>Chapter</th>
             <th>Last Modified</th>
