--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/content-selection/templates/content-selection.html
@@ -11,7 +11,7 @@
                 <th>Question</th>
                 {{#isModule}}
                 <th>Content Type</th>
-                <th>Present in training module</th>
+                <th>Present in module</th>
                 {{/isModule}}
                 {{#isQuiz}}
                 <th>Level</th>
