--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/textbooks-list.html
@@ -25,7 +25,7 @@
 
 		{{#take_quiz}}
 			<div class="meta modules rec">
-			    Class Test Status 
+			    Take at Home Status 
 			</div>
 		{{/take_quiz}}
 		
