--- a/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teaching-modules/templates/content-modules-list.html
@@ -19,7 +19,8 @@
                         <select class="select2-filters" id="quiz-type-filter" style="width:150px">
                         <option value="">All Types</option>
                             <option value="practice">Practice Quiz</option>
-                            <option value="test">Class Test</option>
+                            <option value="test">Take at Home</option>
+                            <option value="class_test">Class Test</option>
                         </select>
                     {{/take_quiz}}
                     </div>
