content builder id added in css

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -40,7 +40,7 @@
 	overflow-x: auto;
 }
 
-#content-board, #content-board.quizContent{
+#content-board, #content-board.quizContent, #content-builder{
 	#myCanvas{
 		//border: 1px solid #505458;
 		background: @color-white;
