--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -26,10 +26,10 @@
           <div class="pull-left m-l-5 text-error"><h5 class="no-margin">Not Started</h5> {{practice_not_started}}</div>
     </div>
     <div class="meta modules rec">
-          <h4 class="b-grey b-b p-b-10 m-t-20 m-b-10">Total Quizzes: {{class_test_count}}</h4>
-          <div class="pull-left text-success"><h5 class="no-margin">Completed</h5> {{class_test_completed}}</div>
-          <div class="pull-left m-l-5 text-info"><h5 class="no-margin">Paused</h5> {{class_test_in_progress}}</div>
-          <div class="pull-left m-l-5 text-error"><h5 class="no-margin">Not Started</h5> {{class_test_not_started}}</div>
+          <h4 class="b-grey b-b p-b-10 m-t-20 m-b-10">Total Quizzes: {{take_at_home_count}}</h4>
+          <div class="pull-left text-success"><h5 class="no-margin">Completed</h5> {{home_test_completed}}</div>
+          <div class="pull-left m-l-5 text-info"><h5 class="no-margin">Paused</h5> {{home_test_in_progress}}</div>
+          <div class="pull-left m-l-5 text-error"><h5 class="no-margin">Not Started</h5> {{home_test_not_started}}</div>
     </div>
 {{/take_quiz}}
 
